# JOOKO

./: README.md
Backend/: Cargo.toml
Backend/src/: lib.rs
Frontend/: bower.json  package-lock.json  package.json
Frontend/nbproject/: project.properties  project.xml
Frontend/nbproject/private/: private.xml
Frontend/public_html/: index.html
Frontend/public_html/css/: index_main.css  navbar.css
Frontend/public_html/js/: index.js  near-wallet.js  project_list.js
