[package]
name = "crowndfounding_on_near"
version = "1.0.0"
authors = ["ISSET LLC <info@uht-sport.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.2"
near-contract-standards = "4.0.0-pre.2"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
